# IronRDP

crates/ironrdp-blocking/src/: connector.rs
crates/ironrdp-client/src/: rdp.rs
crates/ironrdp-connector/: Cargo.toml
crates/ironrdp-connector/src/: connection.rs  connection_finalization.rs  legacy.rs  lib.rs  license_exchange.rs  standard_security.rs
crates/ironrdp-pdu/src/: lib.rs
crates/ironrdp-pdu/src/crypto/: mod.rs  rc4.rs
crates/ironrdp-rdpeudp2/: Cargo.toml
crates/ironrdp-rdpeudp2/src/: ack.rs  data.rs  header.rs  lib.rs
crates/ironrdp-session/src/: active_stage.rs  fast_path.rs  image.rs
crates/ironrdp-session/src/x224/: mod.rs
crates/ironrdp-testsuite-core/tests/session/: autodetect.rs
crates/ironrdp-tls/: Cargo.toml
crates/ironrdp-tokio/src/: lib.rs
crates/ironrdp-web/src/: session.rs
ffi/src/session/: mod.rs
